2013-09-16  Eli Zaretskii  <eliz@gnu.org>

	* output.c [WINDOWS32]: Include windows.h and sub_proc.h, to avoid
	compiler warnings for CLOSE_ON_EXEC.

2013-09-16  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.91.
	* NEWS: Ditto.

2013-09-15  Paul Smith  <psmith@gnu.org>

	* doc/make.texi (Error Messages): Add a bit more info to the
	section on static pattern errors, since they're common.
	Fixes Savannah bug #31326.

	* read.c (eval_makefile): If the file open fails with an
	unrecoverable error, stop now rather than trying to make it.
	Fixes Savannah bug #27374.

	* main.c (main): Perform the validation of the jobserver FDs
	early, before we read makefiles, to ensure that something hasn't
	opened and used those FDs for some other reason.
	Fixes Savannah bug #39934.

	* main.c (main): Don't set MAKEFLAGS in the environment when we
	restart.  We have the original command line flags so keep the
	original MAKEFLAGS settings as well.
	Fixes Savannah bug #39203.

2013-09-14  Paul Smith  <psmith@gnu.org>

	* main.c (decode_debug_flags): Add support for the "n" flag to
	disable all debugging.
	* make.1: Document the "n" (none) flag.
	* doc/make.texi (Options Summary): Ditto.
	* NEWS: Ditto.
	Fixes Savannah bug #35248.

	* misc.c (close_stdout): Move to output.c.
	* main.c (main): Move atexit call to output_init().
	* makeint.h: Remove close_stdout() declaration.
	* output.c (output_init): Add close_stdout at exit only if it's	open.
	Fixes Savannah bug #33134.  Suggested by David Boyce <dsb@boyski.com>.

2013-09-14  Paul Smith  <psmith@gnu.org>

	* misc.c (set_append_mode, open_tmpfd, open_tmpfile): Move to output.c.
	* misc.h: Ditto.
	* output.h: Ditto.
	* main.c (main): Move stdio init into output.c:output_init().
	Change open_tmpfile() to output_tmpfile().
	* output.c: Rename open_*() to output_*().  set_append_mode() and
	open_tmpfd() are static.
	(_outputs, log_working_directory): Accept a struct output and